fixed y-axis cut off

--- a/src/components/CompoundInterestForm/CompoundInterestForm.css
+++ b/src/components/CompoundInterestForm/CompoundInterestForm.css
@@ -1,3 +1,8 @@
+#compound-chart-container {
+    width: 100%;
+    margin: 30px 25% 30px 0;
+}
+
 #compound-interest-form {
     display: flex;
     flex-direction: column;
@@ -93,9 +98,4 @@
 #compound-submit-button:active:hover {
     margin-top: 18px;
     box-shadow: 0px 0px 0px 0px #6B5BB6;
-}
-
-#compound-chart-container {
-    width: 100%;
-    margin: 30px 25% 30px 25%;
 }
